2002-05-14  Jon K Hellan  <hellan@acm.org>

	* src/main-component.c (control_activated_cb): Don't call
	bonobo_ui_component_rm. We got a warning from bonobo when the
	containing shell was deleted.

2002-05-14  Jon K Hellan  <hellan@acm.org>

	* src/GNOME_Gnumeric_Component.xml: Add File/Print setup,
	File/Print, File/Print preview.

	* src/workbook-control-component.c (cb_file_print_setup)
	(cb_file_print, cb_file_print_preview): New functions. Invoke
	File/Print setup, File/Print, File/Print preview.
	(verbs): Add File/Print setup, File/Print, File/Print preview.

	* src/main-component.c (gnumeric_component_factory): Initialize
	plugins. Yet another bpb.

2002-05-14  Morten Welinder  <terra@diku.dk>

	* configure.in (GNUMERIC_LOCALE_DIR): Deduce.
	* src/libgnumeric.c (init_init): Use GNUMERIC_LOCALE_DIR.

2002-05-14  Jon K Hellan  <hellan@acm.org>

	* src/bonobo-io.c (read_from_stream): Brown paper bag.

2002-05-14  Jon K Hellan  <hellan@acm.org>

	* src/bonobo-io.c (init_for_inflate): Use size of buffer, not size
	of pointer to buffer.

2002-05-13  Jon K Hellan  <hellan@acm.org>

	* src/cmd-edit.[ch] (cmd_paste): Remove 'time' parameter.

	* src/cmd-edit.c (cmd_paste): Call wb_control_paste_from_selection
	without 'time' parameter.
	(cmd_paste_to_selection): Call cmd_paste without 'time' parameter.

	* src/item-cursor.c (item_cursor_do_action): Remove 'time'
	parameter. Call cmd_paste without 'time' argument.
	(context_menu_hander, item_cursor_do_drop): Call
	item_cursor_do_action without 'time' argument.

	* src/gui-clipboard.[ch]: Switched to GtkClipboard API.
	(x_request_clipboard): Remove 'time' parameter.
	(x_clipboard_bind_workbook): Remove.
	(x_claim_clipboard): New function. Claims ownership of primary and
	clipboard.

	* src/gui-clipboard.c
	(x_clipboard_to_cell_region): Renamed from
	x_selection_to_cell_region.
	(x_clipboard_received): Renamed from
	x_selection_received. 'widget' parameter replaced with
	'clipboard', and 'time' parameter dropped. Call