@@ -1,3 +1,8 @@
+2002-05-15  Morten Welinder  <terra@diku.dk>
+
+	* src/main-application.c (warn_about_ancient_gnumerics): Don't
+	complain unless the file name has a slash in it.
+
 2002-05-14  Jon K Hellan  <hellan@acm.org>
 
 	* src/main-component.c (control_activated_cb): Don't call
